--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -12,7 +12,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
-          href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Comfortaa:wght@300&family=Patrick+Hand&family=Schoolbell&display=swap"
+          href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Jost:wght@200&family=Comfortaa:wght@300&family=Patrick+Hand&family=Schoolbell&display=swap"
           rel="stylesheet" />
     </head>
   <body>
