pointless functionless footer I'm praying won't somehow break something

--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -17,5 +17,8 @@
     </head>
   <body>
     <div id="root"></div>
+        <footer>
+          <img src="footsies.jpeg" alt="Footer Image">
+        </footer>
   </body>
 </html>
