--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -19,8 +19,8 @@
     </head>
   <body>
     <div id="root"></div>
-        <footer>
+        <!-- <footer>
           <img src="footsies.jpeg" alt="Footer Image">
-        </footer>
+        </footer> -->
   </body>
 </html>
